# taper

./: Cargo.toml  LICENSE  README.md  build.rs  pytorch_mnist_benchmark.py  pytorch_mnist_cnn_benchmark.py
.cargo/: config.toml
examples/: ptq_quantize.rs  qat_example.rs  quantize_model.rs  train_mnist.rs  train_mnist_cnn.rs  train_quantized_cnn.rs
src/: activation.rs  gemm.rs  lib.rs  loss.rs  main.rs  nn.rs  ops.rs  optim.rs  quantization.rs  tape.rs  tensor.rs  train.rs
src/data/: mnist.rs
src/quantization/: config.rs  fake_quantize.rs  mod.rs  observers.rs  qat_config.rs  qat_layers.rs  qat_manager.rs
tests/: smoke.rs
